--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "@ngrx/store": "^16.1.0",
     "flowbite": "^1.7.0",
+    "jwt-decode": "^3.1.2",
     "preline": "^1.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.3",
-    "@angular/cli": "~16.0.3",
+    "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
